--- a/static/invoice.html
+++ b/static/invoice.html
@@ -50,12 +50,16 @@
         <span>Transaction Amount (INR)</span>
         <span>Taxable Value</span>
         <span>IGST 18%</span>
+        <span>CGST 9%</span>
+        <span>SGST 9%</span>
         <span>Total Invoice Value</span>
       </div>
       <div>
         <span>Platform charges CREDIT CARD – Feb -
           2023</span>
         <span>998313</span>
+        <span>-</span>
+        <span>-</span>
         <span>-</span>
         <span>-</span>
         <span>-</span>
@@ -222,9 +226,6 @@
     text-align: center;
   }
 
-  #tsx div span:last-child {
-    border-right: 2px solid black;
-  }
 
   #tsx div span:nth-child(1) {
     width: 30%;
@@ -243,10 +244,19 @@
   }
 
   #tsx div span:nth-child(5) {
-    width: 10%;
+    width: 7%;
   }
 
   #tsx div span:nth-child(6) {
+    width: 7%;
+  }
+
+  #tsx div span:nth-child(7) {
+    width: 7%;
+  }
+
+  #tsx div span:last-child {
+    border-right: 2px solid black;
     width: 20%;
   }
 
